chore: fixes uneven headlines

--- a/docs/css/typo.css
+++ b/docs/css/typo.css
@@ -24,12 +24,14 @@ h1, h2, h3, h4, h5, h6 {
 
 .headline-1 {
 	font-size: 2em;
-	line-height: 1.4em;	
+	line-height: 1.4em;
+	margin-top: 0.3em;
 }
 
 .headline-2 {
 	font-size: 1.5em;
 	line-height: 1.3em;	
+	margin-bottom: 1.25em;
 }
 
 .headline-3 {
